feat: add README.md

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Recipe application",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "build": "parcel build index.html --dist-dir ./dist",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
